src/riot-rs-macros/tests/ui/spawner/async_fn.stderr
error: custom attribute panicked
  --> tests/ui/spawner/async_fn.rs:10:1
   |
10 | #[riot_rs::spawner(autostart)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: spawner functions cannot be async, consider using `task` instead
